--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -249,7 +249,7 @@
                   </td>
 
                   <td class="px-6 py-4 text-left text-sm">
-                    <a href="#" class="text-lime-600 hover:underline ml-3">ویرایش</a>
+                    <a href="{% url 'store:product_edit' product.id %}" class="text-lime-600 hover:underline ml-3">ویرایش</a>
                     <a href="javascript:void(0)" onclick="deleteProduct({{ product.id }})"
                       class="text-red-600 hover:underline">حذف</a>
                   </td>
